--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,6 @@ body::-webkit-scrollbar-thumb {
     border: 3px solid #FFD9D9;
 }
 
-body
-
-
 h1 {
     font-family: 'Pirata One', cursive; 
     font-size: 5em;
@@ -74,7 +71,7 @@ footer {
     object-fit: cover;
     filter: grayscale(1) contrast(1.1);
     -webkit-filter: grayscale(1) contrast(1.1);
-
+    padding: 5%;
 }
 
 .thumbnail:hover {
@@ -208,9 +205,8 @@ footer {
         width: 100%;
         height: 100vh;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(7, 1fr);;
-    }
-    
+        grid-template-rows: repeat(7, 1fr);
+    } 
 }
 
 /* Tableta */
