--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
     cursor: crosshair;
 }
 
-
 body::-webkit-scrollbar {
     width: 7px;
 }
@@ -32,7 +31,7 @@ h1 {
     font-size: 5em;
 }
 
-nav {
+header {
     position: fixed;
     display: flex;
     flex-direction: row;
@@ -45,9 +44,12 @@ nav {
     z-index: 1;
 }
 
-.container {
-    max-width: 60rem;
-    margin: auto;
+article {
+    padding-top: 1%;
+}
+
+button {
+    background: transparent;
 }
 
 nav ul{
@@ -65,6 +67,41 @@ footer {
     color: red;
 }
 
+.links {
+    color: red;
+}
+
+.links:hover {
+    text-decoration: underline;
+}
+
+.bio {
+    grid-row: 3;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    display: flex;
+    justify-content: space-around;
+}
+
+.bio img {
+    border-radius: 100%;
+    max-width: 200px;
+}
+
+.contacto {
+    grid-row: 3;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    max-width: 60rem;
+    margin: auto;
+}
+
 .thumbnail {
     height: 29rem;
     width: 12rem;
@@ -79,6 +116,29 @@ footer {
     filter: none;
 }
 
+.boton {
+    text-decoration: none;
+    color: white;
+}
+
+.menu-item {
+    padding-right: 20%;
+}
+
+.menu-item:hover,
+.menu-item.active {
+    text-decoration: underline;
+}
+
+#menu {
+    display: none;
+}
+
+#main-menu {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 #scroll {
     width: 100%;
     margin: 0px auto;
@@ -87,7 +147,7 @@ footer {
 }
 
 #scroll ul {
-    margin: 0; 
+    margin: 0%; 
     padding: 0;
     display: table;
     list-style: none;
@@ -101,7 +161,7 @@ footer {
 }
     
 #scroll span {
-    display:block;
+    display: block;
     padding-top: 5px;
     padding-bottom: 10px;
     color: black;
@@ -123,30 +183,48 @@ footer {
     border: 7px solid #FFD9D9;
 }
 
-
-.boton {
-    text-decoration: none;
+#logo {
+    font-size: 30px;
     color: white;
 }
 
-.menu {
-    display: none;
+#iconos {
+    color: white;
+    padding: 1.2vw;
+    font-size: 25px;
 }
 
-#main-menu {
+#iconos:hover {
+    color: black;
+}
+
+#mail a {
+    color: white;
+}
+
+#mail a:hover {
+    color: red;
+}
+
+#descripcion {
+    max-width: 50%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    z-index: 2;
+    color: black;
+    background: #FFD9D9;
+    border: 10px solid #FFD9D9;
+    border-radius: 2%;
+    font-size: large;
 }
 
-.menu-item {
-    padding-right: 1%;
+#titulo-bio h1 {
+    position: fixed;
 }
 
-.menu-item:hover,
-.menu-item.active {
-    text-decoration: underline;
+#titulo-bio h1 {
+    z-index: 3;
 }
-
 
 #grilla {
     display: grid;
@@ -157,7 +235,6 @@ footer {
 }
 
 #item1 {
-
     grid-row: 1;
     grid-column-start: 1;
     grid-column-end: 6;
@@ -189,13 +266,11 @@ footer {
     line-height : 90%;
 }
 
-#item7 {
+#item5 {
     grid-row: 10;
     grid-column-start: 5;
     grid-column-end: 6;
-    align-items: center;
 }
-
 
 /* Mobile */
 @media (max-width: 600px) {
@@ -205,16 +280,149 @@ footer {
         height: 100vh;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(7, 1fr);
-    } 
+    }
+    
+    #item2 {
+        grid-row: 2;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        display: flexbox;
+        color: red;
+    }
+
+    #item3 {
+        display: block;
+        grid-row: 3;
+        grid-row-end: 6;
+        grid-column-start: 1;
+    }
+    
+    #item4 {
+        grid-row: 2;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        color: black;
+        font-size: large;
+        margin-top: 4em;
+    }
+
+    #item5 {
+        display: none;
+    }
+
+    #scroll li {
+        padding: 0 0 0 0;
+        text-align: left;
+        display: flex;
+    }
+
+    #scroll span {
+        margin-left: 10%;
+    }
+
+    .thumbnail {
+        height: 20vh;
+        width: 100vw ;
+        text-align: center;
+        padding: 0;
+    }
+
+    #main-menu {
+        display: none;
+    }
+
+    #menu {
+        display: initial;
+        font-weight: 900;
+        color: white;
+    }
+
+    body.mobile-menu-active nav #main-menu {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        z-index: 1;
+        background-color: #fafaf8;
+    }
+
+    #mail a {
+        font-size: 40px;
+    }
+
+    .contacto {
+        grid-row: 2;
+    }
+
+    #bio p {
+        margin-right: 10%;
+        max-width: 100%;
+    }
+
+    .bio {
+        margin-right: 10%;
+        margin-left: 10%;
+        display: flex;
+        flex-direction: column;
+        grid-row-start: 2;
+        grid-row-end: 6;
+        grid-column-start: 1;
+    }
+
+    #descripcion {
+        max-width: 100%;
+        margin-right: 10%;
+        margin-left: 10%;
+        z-index: 2;
+        color: black;
+    }
 }
 
-/* Tableta */
-@media (max-width: 1024px) {
+/* Tablet */
+@media (max-width: 1024px) and (min-width: 600px) {
     #grilla {
         display: grid;
         width: 100%;
         height: 100vh;
         grid-template-columns: 25% 25% 25% 25%;
         grid-template-rows: 10% 20% 20% 20% 20% 5% 5%;
+    }
+
+    #item4 {
+        grid-row: 3;
+        grid-column-start: 1;
+        grid-column-end: 1;
+        margin-left: 10%;
+        margin-top: 75px;
+        color: black;
+        font-size: large;
+        line-height: 90%;
+    }
+
+    #item3 {
+        display: block;
+        grid-row: 3;
+        grid-row-end: 6;
+        grid-column-start: 2;
+        grid-column-end: 5;
+    }
+
+    #item5 {
+        grid-row: 10;
+        grid-column-start: 4;
+        grid-column-end: 4;
+        align-items: center ;
+    }
+
+    #mail a {
+        font-size: 7vw;
+    }
+
+    .contacto {
+        grid-row: 2;
     }
 }
